[package]
name = "dream_simulator"
version = "0.1.0"
authors = ["Basilicous <haroldthesenpai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
rayon = "1.5.0"
english-numbers = "0.3.3"
rustplotlib = "0.0.4"