[package]
name = "dream_simulator"
version = "0.1.0"
authors = ["Basilicous <haroldthesenpai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
threadpool = "1.8.0"
english-numbers = "0.3.3"
simple_logger = "1.11.0"
log = "0.4"
text_io = "0.1.8"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"